--- a/sales-app/src/App.css
+++ b/sales-app/src/App.css
@@ -1,22 +1,51 @@
-.App {
-  text-align: center;
+h1{
+    font-size:18px;
+    margin-bottom:20px;
 }
 
-.App-logo {
-  height: 40vmin;
+#courses{
+    list-style: none;
+    display: inline-block;
+    width: 500px;
+    text-align: left;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#courses p{
+    display: block;
+    padding: 20px 20px;
+    background-color: #C5EFF7;
+    color: #000;
+    position: relative;
+    cursor: pointer;
+
+    transition: 0.3s;
 }
 
-.App-link {
-  color: #09d3ac;
+#courses p b{
+    position: absolute;
+    right: 30px;
+    width: 100px;
+    color: #000;
+    text-align: right;
+}
+
+#courses p:hover{
+    background-color:#52B3D9;
+    color:#fff;
+}
+
+#courses p.active{
+    color:#fff;
+    background-color:#446CB3;
+}
+
+#courses p.active b{
+    color: #fff;
+}
+
+
+#total{
+    background: #3FC380 !important;
+    cursor: default !important;
+    padding-top: 10px !important;
 }
