--- a/firebase/2. firebase-login/firebase-login/src/App.css
+++ b/firebase/2. firebase-login/firebase-login/src/App.css
@@ -75,3 +75,12 @@ p{
 .hide{
   display: none;
 }
+
+.google {
+  font-size: 30px;
+  background-color: #DD4B39;
+  color: #fff;
+  padding: 10px 30px;
+  margin-top: 20px;
+  margin-right: 10px;
+}
